{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "2b816c2d-8bf8-46ca-8474-f85babd9ed87",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "18699c3e-1766-4d71-90d2-e86a0b01a0c3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "9cee6453-a771-4f3c-96ed-3edf30610db2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "56c86096-f444-4d3d-aea5-9c282ad986be",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7bd0ca9e-9d77-4258-ad6d-1aa5007083d4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "dd2ee61e-3b6c-4d6f-9d7f-8e2ec35d2c63",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4040b286-a9aa-40e9-b34e-66ade682e215",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player Camera",
            "id": "4dde5220-d3d4-4154-b753-f1c8d7762f98",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "06a4aaa1-39dc-481b-908d-66d0899c721e",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "124c6f8a-45d6-4983-bec5-5130e1b0179f",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "8cb07dfb-a0a4-43c5-aa45-71be2c25e3e5",
            "actions": [
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "2abd7fb1-c495-40e6-81ae-e3888c195d83",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b6c14a56-e1c8-47a2-b939-598736159b1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MainHandAttack",
                    "type": "Button",
                    "id": "1d1fcb02-11c1-4437-96bf-d5f201c469c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MainHandHeavyAttack",
                    "type": "Button",
                    "id": "089e8665-7d89-4121-b2dd-783acc7d1c2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MainHandChargeAttack",
                    "type": "PassThrough",
                    "id": "93c6e28c-db30-4dde-9d27-9b2ed9b9345d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(pressPoint=0.05)",
                    "initialStateCheck": false
                },
                {
                    "name": "Dance",
                    "type": "Button",
                    "id": "1e294a45-de77-4b92-aebe-d543030b8d11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Revival",
                    "type": "Button",
                    "id": "23020cc7-1d10-411d-bea8-9de0d50efcdf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionNumber1",
                    "type": "Button",
                    "id": "555bef9f-e6c3-443d-967a-a5a617bec8a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionNumber2",
                    "type": "Button",
                    "id": "b6f3b68a-8c0e-44bd-b607-46702ec43808",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionNumber3",
                    "type": "Button",
                    "id": "ea2585c8-9e36-49ec-b5d1-dc8d0fc3af50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionNumber4",
                    "type": "Button",
                    "id": "f44e6bde-d4b4-4556-a645-adbb58c41149",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionNumber5",
                    "type": "Button",
                    "id": "72094e09-d2ad-4f8f-903e-8dcbffbc366a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionNumber6",
                    "type": "Button",
                    "id": "97ea46eb-c8e4-435f-9703-eb76fc273af7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionNumber7",
                    "type": "Button",
                    "id": "f8dd9a1e-6fbc-44dc-bb01-ae4610aabe10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionNumber8",
                    "type": "Button",
                    "id": "bd6c1a0b-66e2-4dc0-b280-a24f75f532de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionNumber9",
                    "type": "Button",
                    "id": "cffbc065-b0fa-4c1a-962f-53fbf3f074ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lock On",
                    "type": "Button",
                    "id": "cc845a24-5537-4a58-a287-9cd437e91b87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seek Left Lock On Target",
                    "type": "Button",
                    "id": "2f3191d5-d384-4cac-b914-bd41593d27cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seek Right Lock On Target",
                    "type": "Button",
                    "id": "9f12a3ac-338c-48fa-a22e-2c1345d2c73d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a0fbe47b-aceb-48f2-a124-fd602466e667",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49e77d2b-0c5e-4136-849b-343ab88a5301",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "049c101e-8d5b-41d9-a593-682e4df9b9cb",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dance",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bd858d9-5d51-4ece-a65e-4f0e1dcf29b8",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionNumber1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77fbd7be-76d1-4500-a08c-9844eb3d6f95",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionNumber2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f18818fa-881b-435b-ae61-6f1f2f042c3b",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Revival",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6c17767-313e-402f-86eb-e14289442bc6",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lock On",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28c46ba4-80e0-4842-b2ea-10d4dda88200",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainHandAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24060c47-b509-4f26-bbd5-3468e29fabb6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainHandChargeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "215d4f15-1bf0-4baf-82bd-ec97dad6272b",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionNumber3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9daaa794-6a93-40db-9567-c1c8363eff98",
                    "path": "<Keyboard>/comma",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seek Left Lock On Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35a0144f-ba41-4361-891c-84e1ce9876c1",
                    "path": "<Keyboard>/period",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seek Right Lock On Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25cd6f1c-343e-4aad-9b3d-2dc90efa52f3",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionNumber4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a76df9bc-3c7f-4668-be76-97b1b21cda98",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionNumber5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "955e738c-7c13-4bf0-8312-00a5a9c8fdc7",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionNumber6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1932ef6e-550f-483d-81cb-396bfda853b4",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionNumber7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f1b3fc8-b604-4bdd-af07-115d1a6f9133",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionNumber8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e2bdd67-9d73-4e6f-9a8c-abb4b3b9c09f",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionNumber9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "654303a0-2815-4bc2-b937-b5a46233c2d2",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainHandHeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "9c7b0220-92f1-4600-8a75-a1a14f7062b9",
            "actions": [
                {
                    "name": "X",
                    "type": "Button",
                    "id": "24685160-95be-4cee-9ff8-4b99d1753f3f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EscapeMenu",
                    "type": "Button",
                    "id": "6f4986bf-7439-4617-b964-d7e3259fc0ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bfb684b8-188f-42b2-b34f-dc6407ee72a5",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bed04af3-b7e5-4262-8b0a-f7d8fd6e226f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EscapeMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Spellcasting",
            "id": "f03c4dd9-ddba-4801-b285-635d2f601b53",
            "actions": [
                {
                    "name": "SpellMode",
                    "type": "Button",
                    "id": "8042414f-7e59-4e8c-b186-bfe1790a3604",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseSpell",
                    "type": "Button",
                    "id": "be7a8766-8f7f-4d20-8290-dde08a63207b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseSpellHold",
                    "type": "Button",
                    "id": "0ed1009e-4f6d-4f84-96a7-84ac372a33eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d103cf81-6a8f-4cce-813a-77cea06fda6e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpellMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51ebd37b-d423-45a2-9600-a4056790ccd4",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c3495cc-dccf-4157-aa67-141352cec1ba",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseSpellHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}